# ai-wotd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sources.yml
.github/workflows/: daily.yml  rebuild.yml  reprocess.yml  validate-sources.yml
data/index/: processed_days.json  state.json  url_cache.json
data/parquet/: articles.parquet  terms.parquet  wotd.parquet
data/stats/: 2026-04-13.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json
data/wotd/: 2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json
docs/: feed.xml  index.html  style.css
docs/archive/: index.html
schemas/: sources.schema.json
src/wotd/: __init__.py  cli.py  config.py  corpus.py  data.py  export.py  fetch.py  linkfollow.py  llm.py  ranker.py  site.py  state.py  (+2 more)
templates/: archive.html  base.html  day.html  empty.html  feed.xml  style.css
tests/: test_archive_adapter.py  test_corpus.py  test_data_api.py  test_end_to_end.py  test_fetch_dedup.py  test_linkfollow.py  test_llm.py  test_ranker.py  test_rss_adapter.py  test_terms.py  test_terms_caps.py  test_wotd.py
(+1858 files in other folders)
